@@ -1,3 +1,7 @@
+2008-10-12  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Adjusted summary output a bit.
+
 2008-10-09  Marcus Meissner  <marcus@jet.franken.de>
 
 	* ptp-pack.c: factored out ptp time string parser
